<resources>
    <string name="app_name">Unit1Evaluation</string>
    <string name="cero">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="divition">/</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="result">=</string>
    <string name="type_your_name">Type your name</string>
    <string name="type_age">Type your age</string>
    <string name="type_phone_number">Type your phone number</string>
    <string name="send">Send</string>
    <string name="your_data">Your data</string>
    <string name="exit">Exit</string>
</resources>
